src/objects/StudentProcess__c.object
<CustomObject>
    <description>Custom object to manage student processes by record type.</description>
    <fields>
        <fullName>AcademicEvent__c</fullName>
        <description>Picklist item that reflects the Academic Event indicator that would be inserted into SHATCMT in Banner for transcript printing.</description>
        <label>Academic Event</label>
        <picklist>
            <picklistValues>
                <fullName>AU - Academic Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX - Academic Expulsion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS - Disciplinary Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX - Disciplinary Expulsion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL - Provost&apos;s List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcademicHoldReason__c</fullName>
        <label>Academic Hold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Below 120 CUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Degree Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midterm Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Praxis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing Bridge Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Degree Acceleration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student on IC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcademicReviewNotes__c</fullName>
        <description>An open text field used for the Records Associate to make any important notes pertaining to the academic clearance for graduation.</description>
        <label>Academic Review Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcademicStanadardsCommitteeActions__c</fullName>
        <description>Picklist indicating if any Academic Standards Committee actions were taken on the student while reviewing for readmission.</description>
        <label>Academic Standards Committee Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcademicStanding__c</fullName>
        <formula>Student__r.AcademicStanding__c</formula>
        <label>Academic Standing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accommodations__c</fullName>
        <description>Picklist field used to indicate if a student is receiving accommodations through ADA.</description>
        <label>Accommodations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Aware</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Processes</relationshipLabel>
        <relationshipName>Student_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionTaken__c</fullName>
        <description>An multi-select picklist field that allows the user to indicate what action was taken per the request.</description>
        <label>Action Taken</label>
        <picklist>
            <picklistValues>
                <fullName>Added Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Enrollment Exemption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed RCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courses Swapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTP Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Enrollment Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacated Pass</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AdditionalComments__c</fullName>
        <description>Text field used to add additional comments to a student process request (e.g., for withdrawal referral).</description>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdditionalTermGranted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not a student has been granted an additional term due to an appeal for a less than 3 cu academic suspension.</description>
        <label>Additional Term Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if user made a change in Banner to reflect the new student&apos;s new mailing address.</description>
        <label>Address Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that student has Agreed to terms and conditions</description>
        <inlineHelpText>Student has agreed to terms and conditions</inlineHelpText>
        <label>Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmITheCounselor__c</fullName>
        <description>Formula field to be able to create list views based on logged in user and who the counseling completed field user ID is.</description>
        <formula>IF( CounselingCompletedBy__r.Id = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I the Counselor?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <description>Picklist field used to indicate if the student process has been appealed.</description>
        <label>Appeal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Records Approved - Additional Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Records Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Approved - Additional Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApplicationCity__c</fullName>
        <description>This field houses the student&apos;s mailing address as indicated on the student process application.</description>
        <label>Application City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationCurrentTerm__c</fullName>
        <description>This text field (via the StudentProcessCreated workflow) captures the Student&apos;s Current Term at the time the Student Process record was created.</description>
        <inlineHelpText>This field captures the Student&apos;s Current Term at the time the Student Process record was created.</inlineHelpText>
        <label>Application Current Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationEmailAddress__c</fullName>
        <description>This field houses the student&apos;s email address as indicated on the application.</description>
        <label>Application Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationFirstName__c</fullName>
        <description>Field to house the student&apos;s first name from the application.</description>
        <label>Application First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationInstitution__c</fullName>
        <description>Text area that displays the institutions the student attended after withdrawing from WGU</description>
        <label>Application Institution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ApplicationLastName__c</fullName>
        <description>Field to house the student&apos;s last name from the application.</description>
        <label>Application Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationNationCode__c</fullName>
        <description>Nation code for grad app</description>
        <label>Application Nation Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationPhoneNumber__c</fullName>
        <description>This field houses the student&apos;s phone number as indicated on the student process application.</description>
        <label>Application Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationProgramOfStudy__c</fullName>
        <description>Field to house the student&apos;s program of study from the student process application.</description>
        <label>Application Program of Study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationReceived__c</fullName>
        <description>A date field representing the date the student submitted the student process application.</description>
        <label>Application Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationState__c</fullName>
        <description>This field houses the student&apos;s mailing address as indicated on the student process application.</description>
        <label>Application State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationStreetAddress1__c</fullName>
        <description>This field houses the student&apos;s mailing address as indicated on the student process application.</description>
        <label>Application Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationStreetAddress2__c</fullName>
        <description>This field houses the student&apos;s mailing address as indicated on the student process application.</description>
        <label>Application Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationStudentIDNo__c</fullName>
        <description>Field to house the student 9-digit ID number from the student process application.</description>
        <label>Application Student ID No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationTermNumber__c</fullName>
        <description>This field captures (via the StudentProcessCreated workflow) the Student&apos;s Term Number at the time the Student Process record was created.</description>
        <inlineHelpText>This field captures the Student&apos;s Term Number at the time the Student Process record was created.</inlineHelpText>
        <label>Application Term Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationVerification__c</fullName>
        <description>Open text field used for various records online forms for student verification.</description>
        <label>Application Verification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationZipCode__c</fullName>
        <description>This field houses the student&apos;s mailing address as indicated on the student process application.</description>
        <label>Application Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedTestingCenter__c</fullName>
        <description>Open text field used to indicate the approved testing center location a student will take their WGU exam at.</description>
        <label>Approved Testing Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovingManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to user field to indicate who the approving manager was for the student process request.</description>
        <label>Approving Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentProcesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssessmentCode__c</fullName>
        <description>Text field to enter assessment code for posting.</description>
        <label>Assessment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentGrade__c</fullName>
        <description>Picklist to indicate what grade marking should be changed.</description>
        <label>Assessment Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssessmentType__c</fullName>
        <description>A picklist field indicating the type of assessment.</description>
        <label>Assessment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Objective Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssignMentorInBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field that serves as trigger for informatica job.</description>
        <label>Assign Mentor in Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssociatedStudentProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link two student processes together by selecting the associated student process from the lookup.</inlineHelpText>
        <label>Associated Student Process</label>
        <referenceTo>StudentProcess__c</referenceTo>
        <relationshipLabel>Student Processes</relationshipLabel>
        <relationshipName>Student_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutomatingICError__c</fullName>
        <label>Automating IC Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BannerId__c</fullName>
        <formula>Student__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerKey__c</fullName>
        <description>Custom field used for Informatica Banner processing.</description>
        <label>Banner Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Below120CUs__c</fullName>
        <description>A picklist field that allows the user to select the appropriate option based on an academic review of undergraduate competency unit requirements.</description>
        <label>Below 120 CU&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Below30CUs__c</fullName>
        <label>Below 30 CU&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BestContactNumber__c</fullName>
        <inlineHelpText>Best Contact Number for the Student?</inlineHelpText>
        <label>Best Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BestTimeToContact__c</fullName>
        <description>Student disclosed when is the best time to contact the student</description>
        <inlineHelpText>When is the best time to contact the student?</inlineHelpText>
        <label>Best Time To Contact</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 - 8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 - 9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 - 10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 - 11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 - 12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 - 1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 - 2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 - 3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 - 4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 - 5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 - 6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 - 7:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillFee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate that the readmission fee should be billed.</description>
        <label>Bill Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BursarQuickEmail__c</fullName>
        <description>Quick email for bursar to contact student from the student process object.</description>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p3_lkid=&quot;&amp;Id&amp;&quot;&amp;p2_lkid=&quot;&amp;Student__r.Id&amp;&quot;&amp;p24=&quot;&amp;Student__r.OtherEmail__c&amp; 
&quot;&amp;p26=bursar@wgu.edu&amp;retURL=/&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.ImageServer?id=015a00000023DzZ&amp;oid=00Df0000002MhY1&amp;lastMod=1369231498000&quot;,&quot;Send Email&quot;),&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bursar Quick Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMInteractionID__c</fullName>
        <description>The CRM Interaction ID of the interaction related to this record.</description>
        <externalId>true</externalId>
        <label>CRM Interaction ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMInteractionStatus__c</fullName>
        <description>The CRM interaction status of the interaction related to this record.</description>
        <label>CRM Interaction Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampusCode__c</fullName>
        <description>A formula field that brings in the campus code for the student.</description>
        <formula>Student__r.Account.Campus__c</formula>
        <label>Campus Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>A picklist field that allows the user to select the appropriate campus code for the student.</description>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancelledByStudent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field indicating that the student process was requested to be cancelled by the student.</description>
        <label>Cancelled by Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CatalogYear__c</fullName>
        <description>A formula field that pulls in the student&apos;s program catalog term.</description>
        <formula>Student__r.ProgramCatalogTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Catalog Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog__c</fullName>
        <description>Picklist to select new catalog term for program change request</description>
        <label>Catalog</label>
        <picklist>
            <controllingField>NewProgCode__c</controllingField>
            <picklistValues>
                <fullName>200204</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200412</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200509</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200601</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200603</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200605</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200608</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200611</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200612</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200703</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200704</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200705</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200706</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200707</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200801</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200803</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200804</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200806</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200808</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200811</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200902</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200905</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200906</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200907</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200909</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201001</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Custom picklist used to define the overall service category.</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>ADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Concerns (SL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcripts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <description>Picklist to select the new college.</description>
        <label>College</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Education</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactByDate__c</fullName>
        <description>Formula field that calculates the date that W/D recovery needs to contact the student by for retention efforts.</description>
        <formula>CASE( MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, 
(DATEVALUE(CreatedDate)) + NumberOfDaysToContact__c+ FLOOR((NumberOfDaysToContact__c-1)/5)*2, 1, 
(DATEVALUE(CreatedDate)) + NumberOfDaysToContact__c+ FLOOR((NumberOfDaysToContact__c)/5)*2, 2, 
(DATEVALUE(CreatedDate)) + NumberOfDaysToContact__c+ FLOOR((NumberOfDaysToContact__c+1)/5)*2, 3, 
(DATEVALUE(CreatedDate)) + NumberOfDaysToContact__c+ FLOOR((NumberOfDaysToContact__c+2)/5)*2, 4, 
(DATEVALUE(CreatedDate)) + NumberOfDaysToContact__c+ FLOOR((NumberOfDaysToContact__c+3)/5)*2, 5, 
(DATEVALUE(CreatedDate)) + NumberOfDaysToContact__c+ CEILING((NumberOfDaysToContact__c)/5)*2, 6, 
(DATEVALUE(CreatedDate)) - IF(NumberOfDaysToContact__c&gt;0,1,0) + NumberOfDaysToContact__c+ CEILING((NumberOfDaysToContact__c)/5)*2, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContentMet__c</fullName>
        <description>A picklist field that allows the user to select the appropriate option for the given student process.</description>
        <label>Content Met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CounselingCompletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user to indicate which staff member completed the withdrawal or term break counseling.</description>
        <label>Counseling Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentProcesses4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CounselingGrade__c</fullName>
        <description>grade for Term break counseling</description>
        <label>Counseling Grade</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Not Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Attempted, No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Email Contact Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Counsel Completed - Standard Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Counsel Completed - Outcome Changed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreatedByDepartment__c</fullName>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrosswalkApplied__c</fullName>
        <description>An open text field where the user will enter notes about checking or manually applying a crosswalk during a program change student process.</description>
        <label>Crosswalk Applied</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>